@@ -17,7 +17,7 @@
 
 	<div id="main-content">
 
-		<h1><?php esc_html_e( 'Oops! That page can&rsquo;t be found.', 'ayaspirit' ); ?></h1>
+		<h1><?php esc_htmlesc_html_e( 'Oops! That page can&rsquo;t be found.', 'ayaspirit' ); ?></h1>
 
 		<div class="content">
 			<p>
