@@ -1,5 +1,81 @@
 <?php
 /**
+ * Pro customizer section.
+ *
+ * @since  1.0.0
+ * @access public
+ */
+if ( class_exists('WP_Customize_Section') ) {
+
+	class ayaspirit_Customize_Section_Pro extends WP_Customize_Section {
+
+		/**
+		 * The type of customize section being rendered.
+		 *
+		 * @since  1.0.0
+		 * @access public
+		 * @var    string
+		 */
+		public $type = 'ayaspirit';
+
+		/**
+		 * Custom button text to output.
+		 *
+		 * @since  1.0.0
+		 * @access public
+		 * @var    string
+		 */
+		public $pro_text = '';
+
+		/**
+		 * Custom pro button URL.
+		 *
+		 * @since  1.0.0
+		 * @access public
+		 * @var    string
+		 */
+		public $pro_url = '';
+
+		/**
+		 * Add custom parameters to pass to the JS via JSON.
+		 *
+		 * @since  1.0.0
+		 * @access public
+		 * @return void
+		 */
+		public function json() {
+			$json = parent::json();
+
+			$json['pro_text'] = $this->pro_text;
+			$json['pro_url']  = esc_url( $this->pro_url );
+
+			return $json;
+		}
+
+		/**
+		 * Outputs the Underscore.js template.
+		 *
+		 * @since  1.0.0
+		 * @access public
+		 * @return void
+		 */
+		protected function render_template() { ?>
+
+			<li id="accordion-section-{{ data.id }}" class="accordion-section control-section control-section-{{ data.type }} cannot-expand">
+
+				<h3 class="accordion-section-title">
+					{{ data.title }}
+
+					<# if ( data.pro_text && data.pro_url ) { #>
+						<a href="{{ data.pro_url }}" class="button button-primary alignright" target="_blank">{{ data.pro_text }}</a>
+					<# } #>
+				</h3>
+			</li>
+		<?php }
+	}
+}
+
+/**
  * Singleton class for handling the theme's customizer integration.
  *
  * @since  1.0.0
@@ -61,9 +137,6 @@ final class ayaspirit_Customize {
 	 */
 	public function sections( $manager ) {
 
-		// Load custom sections.
-		require_once( trailingslashit( get_template_directory() ) . 'customize-pro/section-pro.php' );
-
 		// Register custom section types.
 		$manager->register_section_type( 'ayaspirit_Customize_Section_Pro' );
 
@@ -75,7 +148,7 @@ final class ayaspirit_Customize {
 				array(
 					'title'    => esc_html__( 'AyaSpiritPro', 'ayaspirit' ),
 					'pro_text' => esc_html__( 'Upgrade to Pro', 'ayaspirit' ),
-					'pro_url'  => 'https://ayatemplates.com/product/ayaspiritpro'
+					'pro_url'  => esc_url( 'https://ayatemplates.com/product/ayaspiritpro' ),
 				)
 			)
 		);
