@@ -16,6 +16,8 @@
 
 				<div id="footer-content-wrapper">
 
+					<?php get_sidebar('footer'); ?>
+
 					<div class="clear">
 					</div>
 
