@@ -1,3 +1,9 @@
+AyaSpirit 1.1.0, 2017-04-17
+------------------------
+- add full-width page template
+- add 3 footer widget areas
+- bug fixes
+
 AyaSpirit 1.0.9, 2017-01-12
 ------------------------
 - bug fixes
